[metadata]
name = casmail
summary = Cas Mailer
description-file =
    README.rst
author = KhanhCT
author-email = khanhct@fpt.com.vn
home-page =
classifier =
    Environment :: CAS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

packages =
    casmail

[entry_points]
console_scripts =
    mail-tm = casmail.cmd.taskmanager:main

